--- a/minutiae/colophon.tex
+++ b/minutiae/colophon.tex
@@ -9,9 +9,8 @@ The front cover photo is of the former workings of the turret clock of
 St. Stephen's Cathedral in Vienna. The workings can now be seen in the Vienna
 Clock Museum. The picture was taken by Michelle Enemark. (\url{http://www.mjenemark.com/})
 
-This book was built with open source
-software (with the exception of the cover).  Programs like \LaTeX, Pandoc, Python, and Calibre
-(\code{ebook-convert}) were especially helpful.
+This book was built with open source software (with the exception of the
+cover).  Programs like \LaTeX, Pandoc, and Python were especially helpful.
 
 \end{chapter}
 
