--- a/minutiae/frontmatter.tex
+++ b/minutiae/frontmatter.tex
@@ -34,8 +34,8 @@
 \thispagestyle{empty}
 
 \small
-\noindent \textbf{The Performance of Open Source Applications} \\
-Edited by Tavish Armstrong
+\noindent \textbf{500 Lines or Less} \\
+Edited by Michael DiBernardo and Amy Brown
 
 \vspace{0.15cm}
 
@@ -100,8 +100,6 @@ Commons, 444 Castro Street, Suite 900, Mountain View, California,
 \noindent
 The full text of this book is available online at \url{http://www.aosabook.org/}.\\
 All royalties from its sale will be donated to Amnesty International.\\
-
-% TODO new URL?
 
 \vfill
 
