I lied about the directory.

--- a/minutiae/intro.tex
+++ b/minutiae/intro.tex
@@ -28,7 +28,7 @@ resorting to cheap tricks---is a challenging exercise in itself; writing one to
 be read for pedagogical purposes when neatly rendered in a printed book is even
 tougher. As such, the editors have occasionally taken liberties with some of
 the source formatting when porting it into the book. The original
-source for each chapter can be found in the \url{src} subdirectory of project folder. 
+source for each chapter can be found in the \url{code} subdirectory of project folder. 
 
 We hope that the experiences of the authors in this book will help you grow out
 of your comfort zone in your own programming practice. 
