Updating minutiae with up-to-date credits.

--- a/minutiae/frontmatter.tex
+++ b/minutiae/frontmatter.tex
@@ -114,8 +114,8 @@ or for damages resulting from the use of the information contained herein.\\
 
 \vspace{0.15cm}
 
-\noindent Front cover photo \copyright Michelle Enemark \\
-\noindent Cover design by Amy Brown
+\noindent Front cover photo \copyright Kellar Wilson \\
+\noindent Copyediting, cover design, and publishing support by Amy Brown: www.amyrbrown.ca
 
 \vspace{1cm}
 
