--- a/minutiae/colophon.tex
+++ b/minutiae/colophon.tex
@@ -5,9 +5,9 @@ Buivenga.  The text font is \TeX Gyre Termes and the heading font is \TeX Gyre
 Heros, both by Bogus\l{}aw Jackowski and Janusz M. Nowacki.  The code font is
 Inconsolata by Raph Levien.
 
-The front cover photo is of the former workings of the turret clock of 
-St. Stephen's Cathedral in Vienna. The workings can now be seen in the Vienna
-Clock Museum. The picture was taken by Michelle Enemark. (\url{http://www.mjenemark.com/})
+The front cover photo is composed of 23 separate stack focused images of watch
+gear assemblies. The picture was taken by Kellar Wilson.
+(\url{http://kellarwilson.smugmug.com/})
 
 This book was built with open source software (with the exception of the
 cover).  Programs like \LaTeX, Pandoc, and Python were especially helpful.
