Fix test print issues from https://github.com/aosabook/500lines/issues/228.

--- a/minutiae/intro.tex
+++ b/minutiae/intro.tex
@@ -28,7 +28,7 @@ resorting to cheap tricks---is a challenging exercise in itself; writing one to
 be read for pedagogical purposes when neatly rendered in a printed book is even
 tougher. As such, the editors have occasionally taken liberties with some of
 the source formatting when porting it into the book. The original
-source for each chapter can be found in the \url{code} subdirectory of project folder. 
+source for each chapter can be found in the \url{code} subdirectory of its project folder. 
 
 We hope that the experiences of the authors in this book will help you grow out
 of your comfort zone in your own programming practice. 
@@ -89,7 +89,7 @@ of your comfort zone in your own programming practice.
 
 \emph{Audrey Tang (Spreadsheet)}: A self-educated programmer and translator, Audrey works with Apple as an independent contractor on cloud service localization and natural language technologies. Audrey has previously designed and led the first working Perl 6 implementation, and served in computer language design committees for Haskell, Perl 5, and Perl 6. Currently Audrey is a full-time g0v contributor and leads Taiwan’s first e-Rulemaking project.
 
-emph{Leah Hanson (Static analysis)}: Leah Hanson is a proud alum of Hacker School and loves helping people learn about Julia. She blogs at \url{blog.leahhanson.us} and tweets at \url{@astrieanna}.
+\emph{Leah Hanson (Static analysis)}: Leah Hanson is a proud alum of Hacker School and loves helping people learn about Julia. She blogs at \url{blog.leahhanson.us} and tweets at \url{@astrieanna}.
 
 \emph{Ned Batchelder (Template engine)}: Ned is a software engineer with a long career, currently working at edX to build open source software to educate the world.  He's the maintainer of coverage.py, an organizer of Boston Python, and has spoken at many PyCons.  He blogs at \url{nedbatchelder.com}. He once had dinner at the White House.
 
