Fix issues from @amyrbrown's amazing proofread.
- https://github.com/aosabook/500lines/issues/228

--- a/minutiae/intro.tex
+++ b/minutiae/intro.tex
@@ -1,7 +1,7 @@
 \begin{aosachapter}{Introduction}{s:intro}{Michael DiBernardo}
 
 This is the fourth volume in the \emph{Architecture of Open Source Applications}
-series, and the first to not feature the words `open source applications' anywhere in the
+series, and the first to not feature the words ``open source applications'' anywhere in the
 title. 
 
 The first three volumes in the series were about big problems that big programs
@@ -61,7 +61,7 @@ of your comfort zone in your own programming practice.
 
 \emph{Taavi Burns (DBDB)}: As the newest bass (and sometimes tenor) in Countermeasure, Taavi strives to break the mould\ldots sometimes just by ignoring its existence. This is certainly true through the diversity of workplaces in his career: IBM (doing C and Perl), FreshBooks (all the things), Points.com (doing Python), and now at PagerDuty (doing Scala).  Aside from that—when not gliding along on his Brompton folding bike—you might find him playing Minecraft with his son or engaging in parkour (or rock climbing, or other adventures) with his wife. He knits continental.
 
-\emph{Leo Zovic}: Leo (better known online as inaimathi) is a recovering Graphic Designer who has professionally written Scheme, Common Lisp, Erlang, Javascript, Haskell, Clojure, Go, Python, PHP and C. He currently blogs about programming, plays board games and works at a Ruby-based startup in Toronto, Ontario.
+\emph{Leo Zovic}: Leo (better known online as inaimathi) is a recovering graphic designer who has professionally written Scheme, Common Lisp, Erlang, Javascript, Haskell, Clojure, Go, Python, PHP and C. He currently blogs about programming, plays board games and works at a Ruby-based startup in Toronto, Ontario.
 
 \emph{Dr.\@ Christian Muise (Flow shop)}: Dr.\@ Muise is a Research Fellow with the Model-based Embedded and Robotic Systems group at MIT's Computer Science and Artificial Intelligence Laboratory. He is interested in a variety of topics including AI, data-driven projects, mapping, graph theory, and data visualization, as well as Celtic music, carving, soccer, and coffee.
 
